err/tiktalik-cli.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tiktalik'...
Listing './lib/python3.5/site-packages/tiktalik/computing'...
Listing './lib/python3.5/site-packages/tiktalik/loadbalancer'...
Listing './lib/python3.5/site-packages/tiktalik-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/tiktalik_cli'...
Compiling './lib/python3.5/site-packages/tiktalik_cli/auth.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/auth.py", line 58
    print "Unable to access %s: %s" % (CONFIG_FILE_PATH, ex)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tiktalik_cli/command'...
Compiling './lib/python3.5/site-packages/tiktalik_cli/command/auth.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/command/auth.py", line 40
    os.chmod(auth.CONFIG_DIR, 0700)
                                 ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/tiktalik_cli/command/command.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/command/command.py", line 48
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tiktalik_cli/command/image.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/command/image.py", line 36
    print desc
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tiktalik_cli/command/instance.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/command/instance.py", line 46
    print "%s (%s) - %s" % (instance.hostname, instance.uuid, "Running" if instance.running else "Not running")
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tiktalik_cli/command/loadbalancer.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/command/loadbalancer.py", line 62
    print "%s  %s (%s) %s at %s:%d, backends: %s" % (b.name, b.uuid, b.status,
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tiktalik_cli/command/network.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/command/network.py", line 31
    print "%s %s %s %s, owned by %s" % (net.name, net.uuid, net.net, "public" if net.public else "private", net.owner)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tiktalik_cli/command/util.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/command/util.py", line 21
    print "    eth%i addr: %s mac: %s network: %s" % (n.seq, n.ip, n.mac, n.network.name)
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tiktalik_cli/main.py'...
***   File "./lib/python3.5/site-packages/tiktalik_cli/main.py", line 75
    print "Security error"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tiktalik_cli-1.8.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
